# synapse-runtime

./: .gitignore  CMakeLists.txt  LICENSE  README.md  controller.cpp
controller/: CMakeLists.txt  controller.c  controller.cpp  controller.sh  controller_c.sh  controller_cpp.sh  program.json  program.p4info.txt
p4c/: main.json
p4runtime/: CMakeLists.txt
p4runtime_cpp/: CMakeLists.txt
runtime/: CMakeLists.txt  connector.cpp  connector.hpp
runtime/p4runtime/: helper.cpp  helper.hpp
runtime/p4runtime/stream/: listener.cpp  listener.hpp
runtime/p4runtime/stream/handler/: standard.cpp
runtime/p4runtime/stream/handler/environment/: custom.hpp  standard.hpp
runtime/p4runtime/stream/handler/environment/buffer/: update_buffer.cpp  update_buffer.hpp
runtime/utils/: file.cpp  file.hpp  logger.cpp  logger.hpp  runtime_exception.hpp
runtime/wrapper/: connector.hpp
runtime/wrapper/p4runtime/: helper.cpp  helper.hpp
runtime/wrapper/p4runtime/stream/handler/environment/buffer/: update_buffer.cpp  update_buffer.hpp
runtime/wrapper/utils/: logger.cpp  logger.hpp
synapse/: CMakeLists.txt  synapse_p4runtime.h
synapse/connector/: connector.cpp  connector.hpp  connector_params.cpp  connector_params.hpp  connector_wrapper.cpp  connector_wrapper.h
synapse/protobuf/: p4runtime.cpp  p4runtime.hpp  p4runtime_info.cpp  p4runtime_info.hpp  p4runtime_info_wrapper.cpp  p4runtime_info_wrapper.h  p4runtime_wrapper.cpp  p4runtime_wrapper.h
synapse/runtime/: CMakeLists.txt  connector.cpp  connector.hpp
synapse/runtime/exception/: runtime_exception.hpp
synapse/runtime/logger/: logger.cpp  logger.hpp
synapse/runtime/p4runtime/: constants.hpp  helper.cpp  helper.hpp  typedefs.hpp
synapse/runtime/p4runtime/stream/: listener.cpp  listener.hpp  tags.hpp
synapse/runtime/p4runtime/stream/handler/: custom.hpp  environment.hpp  standard.cpp  standard.hpp  update_queue.cpp  update_queue.hpp
synapse/runtime/p4runtime/stream/handler/buffer/: update_buffer.cpp  update_buffer.hpp
synapse/runtime/p4runtime/stream/handler/environment/: custom.hpp  standard.cpp  standard.hpp
synapse/runtime/p4runtime/stream/handler/environment/buffer/: update_buffer.cpp  update_buffer.hpp
synapse/runtime/utils/: constants.hpp  file.cpp  logger.cpp  wrappers.cpp  wrappers.hpp
synapse/runtime/wrapper/: connector.cpp  connector.hpp
synapse/runtime/wrapper/logger/: logger.cpp  logger.hpp
synapse/runtime/wrapper/p4runtime/: helper.cpp  helper.hpp
synapse/runtime/wrapper/p4runtime/stream/handler/: environment.cpp  environment.hpp  update_queue.cpp  update_queue.hpp
synapse/runtime/wrapper/p4runtime/stream/handler/buffer/: update_buffer.cpp  update_buffer.hpp
synapse/runtime/wrapper/p4runtime/stream/handler/environment/: custom.cpp  custom.hpp
synapse/runtime/wrapper/p4runtime/stream/handler/environment/buffer/: update_buffer.cpp  update_buffer.hpp
synapse/runtime/wrapper/utils/: logger.cpp  logger.hpp  wrappers.cpp  wrappers.hpp
synapse/stream/: stream_listener.cpp  stream_listener.hpp
synapse/stream/buffer/: update_buffer.cpp  update_buffer.hpp  update_buffer_wrapper.cpp  update_buffer_wrapper.h
synapse/stream/handler/: listener_handlers.cpp  listener_handlers.hpp  user_handlers.hpp  user_handlers_wrapper.h
synapse/stream/handler/environment/: listener_environment.cpp  listener_environment.hpp  user_environment.hpp
synapse/utils/: file_utils.cpp  file_utils.hpp  typedefs.hpp  typedefs_wrapper.h
